# oqd-trical

./: .gitignore  .gitmodules  404.html  Chamber.py  DEMO_raman_transitions.ipynb  Hamiltonian.py  Ion.py  LICENSE  Results.py  Species.py  adiabatic_elimination.py  analog_Hamiltonian_AST.py  construct_H.py  construct_H_tree.py  index.html  ld_rwa_approximations.py  mkdocs.yaml  objects.inv  pyproject.toml  readme.md  sitemap.xml  structures.py  utilities.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: check_copyright.yml  check_mkdocs_build.yml  pytest.yml
Example/: ReadMe.ipynb  ReadMe.md
doc/: makedoc.bat  open.py
doc/source/: conf.py  index.rst
docs/: index.md
docs/examples/: examples.md
docs/explanation/: approximations.md  backends.md  classes.md  examples.md  hamiltonian_construction.md  mechanical_properties.md  outlook.md  overview.md  reference.md  structures.md
docs/get-started/: acknowledgement.md  installation.md  outlook.md
docs/reference/: backend.md  base.md  compiler.md  dynamiqs.md  interface.md  light_matter.md  misc.md  potential.md  qutip.md  reference.md  spinlattice.md  trappedions.md
docs/source/: conf.py  index.rst  trical.rst
docs/stylesheets/: admonition_template.css  admonitions.css  brand.css
docs/trical/: constants.html  index.html
examples/: 0a_example_mechanical_multispecies.ipynb  0b_examples_mechanical.ipynb  10_example_time_dependence.ipynb  10_example_time_dependence.json  1_example_direct_transition.ipynb  1_example_direct_transition.json  2_example_raman.ipynb  2_example_raman.json  2a_example_rx_pi_by_2.ipynb  2a_example_rx_pi_by_2.json  3_example_uneven.ipynb  3_example_uneven.json  4_example_red_sideband.ipynb  4_example_red_sideband.json  5_example_blue_sideband.ipynb  5_example_blue_sideband.json  6_example_sequential.ipynb  6_example_sequential.json  6a_example_sequential_repeat.ipynb  6a_example_sequential_repeat.json  7_example_sequential_parallels.ipynb  7_example_sequential_parallels.json  8_example_molmer_sorensen.ipynb  8_example_molmer_sorensen.json  8_example_molmer_sorenson.ipynb  8_example_molmer_sorenson.json  8a_example_direct_molmer_sorensen.ipynb  8a_example_direct_molmer_sorensen.json  8a_example_direct_molmer_sorenson.ipynb  8a_example_direct_molmer_sorenson.json  9_example_floquet.ipynb  9_example_floquet.json  9a_example_no_floquet.ipynb  9a_example_no_floquet.json  9b_example_floquet_fast.ipynb  9b_example_floquet_fast.json  example_blue_sideband.ipynb  example_direct_transition.ipynb  example_raman.ipynb  example_red_sideband.ipynb  (+1 more)
examples/direct/: 1_direct_transition.ipynb  1_microwave.ipynb  1_microwave.json  2a_floquet.ipynb  2a_floquet.json  2b_floquet_fast.ipynb  2b_floquet_fast.json  3_direct_molmer_sorensen.ipynb  3_direct_molmer_sorensen.json  3a_red_sideband.ipynb  3a_red_sideband.json  3b_blue_sideband.ipynb  3b_blue_sideband.json  4_molmer_sorensen.ipynb  4_molmer_sorensen.json  5_modulated_microwave.ipynb  5a_modulated_rabi.ipynb  5a_modulated_rabi.json  5b_modulated_phase.ipynb  5b_modulated_phase.json  5c_modulated_detuning.ipynb  5c_modulated_detuning.json  6_time_dependent_rotating_reference_frame.ipynb  6_time_dependent_rotating_reference_frame.json
examples/incoherent/: 1_optical_pumping.ipynb  1_optical_pumping.json  1a_optical_pumping.ipynb  1a_optical_pumping.json  2_resolved_sideband_cooling.ipynb  2_resolved_sideband_cooling.json
examples/mechanical/: 1_examples_mechanical.ipynb  2_example_mechanical_multispecies.ipynb
examples/raman/: 1_raman.ipynb  1_raman.json  2_example_raman.ipynb  2_example_raman.json  2a_red_sideband.ipynb  2a_red_sideband.json  2b_blue_sideband.ipynb  2b_blue_sideband.json  3_example_uneven.ipynb  3_molmer_sorensen.ipynb  3_molmer_sorensen.json  4_example_red_sideband.ipynb  4a_floquet.ipynb  4a_floquet.json  5_example_blue_sideband.json  5_ising.ipynb  5_ising.json  8_example_molmer_sorensen.ipynb
explanation/backends/: index.html
explanation/mechanical_properties/: index.html
explanation/reference/: index.html
get-started/acknowledgement/: index.html
get-started/installation/: index.html
get-started/outlook/: index.html
presentations/IDA/: IDA.tex
reference/compiler/: index.html
reference/dynamiqs/: index.html
reference/interface/: index.html
reference/misc/: index.html
reference/potential/: index.html
reference/qutip/: index.html
reference/spinlattice/: index.html
reference/trappedions/: index.html
scripts/: test.py  test_crystal.py  test_potential.py  test_torch.py
search/: search_index.json
src/oqd_trical/: __init__.py
src/oqd_trical_jl/: Manifest.toml  Project.toml  (+3 more)
stylesheets/: admonition_template.css  admonitions.css  headers.css
tests/: test.py  test_analysis.py  test_backends.py  test_blue_sideband.ipynb  test_coefficients.py  test_mechanical.py  test_potential.py  test_qutip_backend.py  test_red_sideband.ipynb  test_sideband.ipynb
trical/: __init__.py  constants.py
trical.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tutorial/: DEMO_intensity_ramp.ipynb  DEMO_molmer_sorensen.ipynb  DEMO_rabi_flops.ipynb  DEMO_raman_transitions.ipynb  DEMO_sidebands.ipynb  DEMO_single_photon_adiabatic_elimination.ipynb  DEMO_thermal_state.ipynb  Refactor_Experimentation.ipynb  multispecies tutorial.ipynb  test_direct_transition.ipynb  test_raman.ipynb  test_sideband.ipynb  test_uneven_parallel.ipynb  tutorial.ipynb
(+214 files in other folders)
