[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "oqd-trical"
version = "0.1.0dev1"
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = { text = "Apache 2.0" }
keywords = ["quantum", "computing", "compiler", "transpilation", "atomic"]
classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Science/Research ",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Compilers",

    "License :: OSI Approved :: Apache Software License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "autograd",
    "matplotlib",
    "numpy",
    "scipy",
    "sympy",
    "qutip",
    "oqd-core",
    "oqd-compiler-infrastructure",
    "dynamiqs>=0.3.1",
]

[project.optional-dependencies]
docs = [
    "pymdown-extensions",
    "mkdocstrings",
    "mkdocs-material",
    "mkdocstrings-python",
    "mdx_truly_sane_lists",
]
tests = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["oqd_trical*"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
fixable = ["ALL"]

[tool.uv.sources]
oqd-core = { git = "https://github.com/openquantumdesign/oqd-core", rev = "atomic" }
oqd-compiler-infrastructure = { git = "https://github.com/openquantumdesign/oqd-compiler-infrastructure" }

[dependency-groups]
dev = ["jupyter>=1.1.1", "pre-commit>=4.1.0", "ruff>=0.9.6"]


[project.urls]
Homepage = "https://github.com/OpenQuantumDesign/oqd-trical"
Repository = "https://github.com/OpenQuantumDesign/oqd-trical.git"
Issues = "https://github.com/OpenQuantumDesign/oqd-trical/issues"
